atualizações dos últimos dias

--- a/style.css
+++ b/style.css
@@ -88,3 +88,115 @@ nav > a:hover, .butoes > a:hover{
     color: var(--cor02);
     line-height: 23px;
 }
+
+.metricas{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    padding-bottom: 96px;
+}
+
+.info-metricas{
+    width: 300px;
+    height: 168px;
+    text-align: left;
+}
+
+.info-metricas h1{
+    color: var(--cor01);
+    font-size: 50px;
+    letter-spacing: -0.02em;
+    line-height: 72px;
+}
+
+.info-metricas p{
+    line-height: 40px;
+}
+
+.info-metricas span{
+    color: var(--cor02);
+    font-size: 14px;
+}
+
+.talentos{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.talentos span{
+    font-size: 14px;
+    color: var(--cor01);
+    font-weight: 500;
+}
+
+.talentos h2{
+    margin: 30px 0px;
+    font-size: 30px;
+}
+
+.talentos p{
+    padding-bottom: 40px;
+    font-size: 17px;
+    color: var(--cor02);
+}
+
+.talentos img{
+    width: 1350px;
+}
+
+.vaga{
+    width: 768px;
+    display: block;
+    margin: 0 auto;
+    padding-top: 40px;
+}
+
+.area-vaga{
+    padding-bottom: 60px;
+    text-indent: -20px;
+    font-size: 18px;
+}
+
+.titulo-vaga{
+    padding-bottom: 30px;
+}
+
+.informacao-vaga{
+    padding-bottom: 30px;
+}
+
+.informacao-vaga span{
+    padding-right: 20px;
+    font-size: 14px;
+    color: var(--cor02);
+}
+
+.depoimentos{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 96px 0;
+}
+
+.depoimentos span{
+    font-size: 14px;
+    font-weight: 600;
+    color: var(--cor01);
+}
+
+.depoimentos h2{
+    font-size: 30px;
+    width: 1088px;
+    text-align: center;
+    padding: 30px 0;
+}
+
+.depoimentos p{
+    line-height: 25px;
+}
+
+.modif{
+    font-size: 14px;
+    color: var(--cor02);
+}
