--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ nav > a:hover, .butoes > a:hover{
 .logo{
     display: flex;
     align-items: center;
-    font-size: 18px;
+    font-size: 17px;
     color: var(--cor02);
     font-weight: 500;
 }
@@ -142,7 +142,7 @@ nav > a:hover, .butoes > a:hover{
 }
 
 .talentos img{
-    width: 1350px;
+    width: 88vw;
 }
 
 .vaga{
@@ -187,7 +187,7 @@ nav > a:hover, .butoes > a:hover{
 
 .depoimentos h2{
     font-size: 30px;
-    width: 1088px;
+    max-width: 1088px;
     text-align: center;
     padding: 30px 0;
 }
@@ -197,6 +197,37 @@ nav > a:hover, .butoes > a:hover{
 }
 
 .modif{
+    font-size: 14px;
+    color: var(--cor02);
+}
+
+.formulario{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.formulario h2{
+    font-size: 30px;
+    padding-top: 40px;
+}
+
+.formulario span{
+    font-size: 17px;
+    color: var(--cor02);
+    padding: 30px 0;
+}
+
+.formulario #mail{
+    border-radius: 8px;
+    padding: 10px 15px;
+    padding-right: 120px;
+    border: 1px solid #D0D5DD;
+    box-shadow: 0px 1px 2px rgba(16, 24, 40, 0.05);
+}
+
+.formulario footer{
+    padding: 30px 0;
     font-size: 14px;
     color: var(--cor02);
 }
