--- a/medias.css
+++ b/medias.css
@@ -1,71 +1,69 @@
 @charset "UTF-8";
 
-@media (min-width: 300px) and (max-width: 1300px) {
-    
+@media (max-width: 1250px) {
     body{
-        margin: 0;
-    }
-    header{
-        margin-bottom: 40px;
-    }
-    
-    .naveg{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 5px;
-        text-align: center;
-        width: 120px;
-        height: 120px;
-        padding-top: 44.8px;
-    }
-
-    nav {
-        display: flex;
-        flex-direction: column;
-        gap: 3px;
-        margin: 0;
-        display: none;
-        
-    }
-
-    .uil-bars{
-        font-size: 30px;
-        cursor: pointer;
-    }
-
-    .butoes{
-        display: none;
-    }
-}
-
-@media (min-width: 800px) and (max-width: 1300px) {
-    .butoes{
-        display: block;
-        padding-right: 10px;
-    }
-
-    .naveg{
-        padding-top: 47.8px;
-    }
-
-    .naveg i{
-        display: none;
+        margin: 0 30px;
     }
 
     nav{
-        display: flex;
-        flex-direction: row;
-        width: 400px;
-        border: 2px solid #8E2424;
-        justify-content: center;
-        padding: 3px;
-        border-radius: 8px;
+        margin-right: 0;
     }
 }
 
-@media (min-width: 1300px) {
-    .naveg i{
+@media (max-width:991px) {
+    .uil-bars{
+        display: block;
+        font-size: 1.3rem;
+        cursor: pointer;
+        color: #667085;
+        transition: .2s linear;
+    }
+
+    .uil-multiply{
+        font-size: 1.2rem;
+        cursor: pointer;
+        color: #667085;
+        transition: .2s linear;
+        transform: rotate(180deg);
+    }
+    
+    nav{
+        position: absolute;
+        border-top:2px solid #8E2424;
+        top:10%; left: 0; right: 0;
+        background-color: white;
+        padding: 1rem;
+        transition: .2s linear;
         display: none;
+    }
+
+    nav a{
+        display: block;
+        margin: 1rem;
+    }
+
+    .botoes{
+        position: absolute;
+        top: 20%; left: 60%; right: 0;
+        text-align: center;
+        transition: .2s linear;
+        display: none;
+    }
+
+    .active-nav{
+        display: block;
+        transition: .2s linear;
+    }
+
+    .active-btn{
+        display: block;
+        transition: .2s linear;
+    }
+
+    .for-cad{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        gap: 10px;
     }
 }
